--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "author": "Soung jin Ryu <neocat@kakao.com>",
     "main": "dest/index.js",
     "dependencies": {
+        "@types/cookie-parser": "^1.4.3",
         "@types/http-errors": "^2.0.1",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/morgan": "^1.9.4",
         "@types/passport": "^1.0.12",
         "@types/passport-discord": "^0.1.6",
         "@types/passport-jwt": "^3.0.8",
+        "@types/passport-oauth2": "^1.4.12",
         "@types/redis": "^4.0.11",
         "@types/swagger-ui-express": "^4.1.3",
         "@types/yamljs": "^0.2.31",
         "acorn": "^8.8.2",
         "acorn-walk": "^8.2.0",
         "arg": "^4.1.3",
+        "cookie-parser": "^1.4.6",
         "create-require": "^1.1.1",
         "diff": "^4.0.2",
         "dotenv": "^16.0.3",
@@ -30,6 +33,9 @@
         "passport": "^0.6.0",
         "passport-discord": "^0.1.4",
         "passport-jwt": "^4.0.1",
+        "passport-oauth2": "^1.7.0",
+        "passport-twitch": "^1.0.3",
+        "passport-twitchtv": "^0.1.4",
         "redis": "^4.6.6",
         "swagger-autogen": "^2.23.1",
         "swagger-cli": "^4.0.4",
