--- a/src/env/.env.production
+++ b/src/env/.env.production
@@ -1,7 +1,7 @@
-port=3100
+port=3000
 
 # HOST
-HOST=http://localhost:3100
+HOST=http://localhost:3000
 
 JWT_HEADER=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
 
@@ -18,3 +18,7 @@ db_database=discord
 db_host=discord.ch1dwks0r06l.ap-northeast-2.rds.amazonaws.com
 db_name=discord
 db_passwd=pGLCX945oE89vjqatyBu
+
+
+# pw
+KEY=R7RV1Gwgvt1Q4fpQJ8QpVoKieKbR5s
