--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "jsonwebtoken": "^9.0.0",
         "make-error": "^1.3.6",
         "morgan": "^1.10.0",
+        "mysql2": "^3.3.0",
         "passport": "^0.6.0",
         "passport-discord": "^0.1.4",
         "passport-jwt": "^4.0.1",
