Add. 미들웨어 설계

--- a/src/env/.env.development
+++ b/src/env/.env.development
@@ -27,4 +27,5 @@ db_log=true
 
 # pw
 KEY=R7RV1Gwgvt1Q4fpQJ8QpVoKieKbR5s
+SECRET=54Qrv9G6XRA4dAYQN8G8H0cUsmWHjZ
 JWT_HEADER=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
