--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "arg": "^4.1.3",
         "cookie-parser": "^1.4.6",
         "create-require": "^1.1.1",
+        "crypto": "^1.0.1",
         "diff": "^4.0.2",
         "dotenv": "^16.0.3",
         "googleapis": "^112.0.0",
