Del. cross-env 삭제

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
         ]
     },
     "scripts": {
-        "start": "cross-env NODE_ENV=production node dist/src/app.js",
+        "start": "node dist/src/app.js",
         "test": "jest",
         "build": "npm i -g tsc-alias tsc && tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
         "dev": "cross-env NODE_ENV=development nodemon --watch src/ --exec ts-node -r tsconfig-paths/register ./src/app.ts"
