--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "create-require": "^1.1.1",
         "crypto": "^1.0.1",
         "diff": "^4.0.2",
+        "discord-interactions": "^3.4.0",
         "dotenv": "^16.0.3",
         "googleapis": "^112.0.0",
         "http-errors": "^2.0.0",
